--- a/server/plugins/Terraria/Data/armorSet.yml
+++ b/server/plugins/Terraria/Data/armorSet.yml
@@ -557,7 +557,9 @@ sets:
   钨钢近战套装:
     lore:
     - ''
-    - §a套装效果： +6 防御
+    - §a套装效果：
+    - §a+6 防御
+    - §a怪物上限略微提高
     attributes:
       defence: 6
       mobLimit: 2
@@ -585,7 +587,6 @@ sets:
     - ''
     - §a套装效果：
     - §a+6 防御
-    - §a+6 防御
     attributes:
       defence: 6
   钨钢召唤套装:
@@ -610,7 +611,7 @@ sets:
     - ''
     - §a套装效果：
     - §a+4 防御
-    - §a+4 所有伤害
+    - §a+4 基础伤害
     attributes:
       defence: 4
       damage: 4
@@ -710,11 +711,11 @@ sets:
     - ''
     - §a套装效果：
     - §a+3 生命恢复
-    - §a+10% 召唤伤害
+    - §a+8% 召唤伤害
     - §a+1 召唤栏
     - §a增加水下适应性
     attributes:
-      damageSummonMulti: 0.1
+      damageSummonMulti: 0.08
       regen: 3
       minionLimit: 1
       waterAffinity: 1
@@ -786,10 +787,10 @@ sets:
     - ''
     - §a套装效果： 
     - §a+10% 召唤伤害
-    - §a+1 召唤栏
+    - §a+2 召唤栏
     attributes:
       damageSummonMulti: 0.1
-      minionLimit: 1
+      minionLimit: 2
   死灵射手套:
     lore:
     - ''
@@ -1036,10 +1037,10 @@ sets:
     lore:
     - ''
     - §a套装效果：
-    - §a+2 仆从容量
+    - §a+3 仆从容量
     - §a+25% 仆从伤害
     attributes:
-      minionLimit: 2
+      minionLimit: 3
       damageSummonMulti: 0.25
   叶绿魔法套装:
     lore:
@@ -1256,9 +1257,12 @@ sets:
   星尘套装:
     lore:
     - ''
-    - §a套装效果： +2 仆从容量
+    - §a套装效果：
+    - §a+2 仆从容量
+    - §a+8% 召唤伤害
     attributes:
       minionLimit: 2
+      damageSummonMulti: 0.08
   龙蒿近战套装:
     lore:
     - ''
@@ -1307,11 +1311,11 @@ sets:
     lore:
     - ''
     - §a套装效果：
-    - §a增加50%召唤伤害和4个仆从栏
+    - §a增加50%召唤伤害和5个仆从栏
     - §a减少刷怪量和刷怪率
     attributes:
       damageSummonMulti: 0.5
-      minionLimit: 4
+      minionLimit: 5
       mobLimit: -2
       mobSpawnRateMulti: -0.5
   光棱套装:
@@ -1381,13 +1385,13 @@ sets:
     - §a套装效果：
     - §a+6 生命恢复
     - §a击中敌人会掉落红心，这个效果有5秒冷却时间
-    - §a增加30%召唤伤害和3召唤栏
+    - §a增加30%召唤伤害和4召唤栏
     - §a如果玩家在90%血量以上，增加15%召唤伤害
     - §a在50%生命及以下获得30点防御
     attributes:
       regen: 6
       damageSummonMulti: 0.3
-      minionLimit: 3
+      minionLimit: 4
   蓝色欧米茄套装:
     lore:
     - ''
@@ -1550,7 +1554,7 @@ sets:
     - ''
     - §a套装效果：
     - §a+5% 移动速度
-    - §a+4 仆从容量和 30% 仆从伤害
+    - §a+4 仆从容量和 33% 仆从伤害
     - §a继承龙蒿套装、血炎套装和始源林海套装召唤头盔的效果
     - §b-> §a继承自龙蒿套装的效果：
     - §a减少刷怪量和刷怪率
@@ -1570,7 +1574,7 @@ sets:
       mobSpawnRateMulti: -0.5
       speedMulti: 0.05
       minionLimit: 4
-      damageSummonMulti: 0.3
+      damageSummonMulti: 0.33
   天钻套装:
     lore:
     - ''
